# Accounting_app

.github/workflows/: ci.yml
Accounting/: CMakeLists.txt
Accounting/data/: bills.json  budgets.json  categories.json  users.json
Accounting/include/core/: account_manager.h  operation_result.h
Accounting/include/managers/: bill_manager.h  budget_manager.h  category_manager.h  report_manager.h  user_manager.h
Accounting/include/models/: bill_data.h  budget.h  budget_data.h  period.h  query_criteria.h  report.h  user.h
Accounting/src/: main.cc
Accounting/src/cli/: cli.cc
Accounting/src/core/: account_manager.cc
Accounting/src/managers/: bill_manager.cc  category_manager.cc  report_manager.cc  user_manager.cc
Accounting/src/models/: bill.cc  bill_data.cc  budget.cc  budget_data.cc  category.cc  report.cc
Accounting/src/storage/: json_storage.cc
Accounting/test/: ITtest_bottom_to_top.cpp  ITtest_top_to_bottom.cpp  test_bill.cpp  test_category.cpp
Accounting/test_data/: bills.json  categories.json  users.json
Accounting_UI/: Accounting_UI.pro  addbilldialog.cpp  addbilldialog.h  mainwindow.cpp  mainwindow.h
Accounting_lab4/: CMakeLists.txt
Accounting_lab4/data/: bills.json  budgets.json  users.json
Accounting_lab4/include/cli/: cli.h
Accounting_lab4/include/core/: account_manager.h  query_result_types.h
Accounting_lab4/include/managers/: category_manager.h
Accounting_lab4/include/models/: bill.h  bill_data.h  category.h  chart_type.h
Accounting_lab4/include/storage/: json_storage.h  storage.h
Accounting_lab4/src/: cli_main.cc  main.cc
Accounting_lab4/src/managers/: budget_manager.cc
Accounting_lab4/src/models/: bill_data.cc  query_criteria.cc  user.cc
